--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "nodemon": "^1.18.9",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-native-elements": "^1.0.0",
+    "react-native-vector-icons": "^6.2.0",
+    "styled-components": "^4.1.3",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
   "devDependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-styled-components": "^1.10.0",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
