--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^1.18.9",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-images": "^0.5.19",
     "react-native-elements": "^1.0.0",
     "react-native-vector-icons": "^6.2.0",
     "styled-components": "^4.1.3",
@@ -32,7 +33,8 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "file-loader": "^3.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
